--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-input/mask": "^1.2.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,13 +14,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "react-scroll": "^1.9.0"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "node-sass": "^9.0.0",
-    "@types/react-scroll": "^1.8.10"
+    "@types/react-scroll": "^1.8.10",
+    "node-sass": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
